# wotiti

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  README_RELEASE.md  READMEold.md  build.sh  build_windows.ps1  generate_icon.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  init.sh  requirements.txt
.devcontainer/local-features/devtools/: devcontainer-feature.json  install.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: deploy-docs.yml
data/: generate_database.csv  generate_database.db
data/20250213-192225/: generate_database.db
data/20250213-192240/: generate_database.csv  generate_database.db  parameter_run_20250213-192240.json
data/20250214-003236/: generate_database.csv  generate_database.db  parameter_run_20250214-003236.json
data/beispiel-gross/: beispieldaten.db
data/beispiel-klein/: beispieldaten.csv  parameter.json
data/demo/: demo_database.db
data/sounds/: StartupSound.m4a  StartupSound.opus
docs/: .gitignore  GITHUB_SETUP.md  code-of-conduct.md  contributing-guide.md  contributing.md  faq.md  index.md  robots.txt
docs/features/: index.md
docs/guide/: dokumentation.md  user-guide.md
docs/installation/: index.md
scripts/: generate_demo_db.py  migrate_date_format.py
site/: 404.html  index.html  sitemap.xml
site/GITHUB_SETUP/: index.html
site/code-of-conduct/: index.html
site/contributing/: index.html
site/contributing-guide/: index.html
site/faq/: index.html
site/features/: index.html
site/guide/dokumentation/: index.html
site/guide/user-guide/: index.html
site/installation/: index.html
site/search/: search_index.json
src/: app.py  calculations.py  config.py  db_helper.py  idle_monitor.py  main.py  plotting.py  progress_bar.py  single_instance.py  stats.py  statsOLD.py  stats_calculations.py  stats_dashboard.py  stats_generator.py  stats_helper.py  stats_plotting.py  utils.py
src/assets/: style.css
src/data_handling/: db_helper.py  stats_helper.py
src/database/: app_database.db
tests/: test_app.py  test_db_helper.py  test_idle_monitor.py  test_stats_calculations.py  test_utils_workdays.py
