[tool.poetry]
name = "wotiti"
version = "0.1.0"
description = "Small UI to track worktime"
authors = ["grenzenloseSchublade <hans.mueller@rub.de>"]
license = "MIT"
repository = "https://github.com/grenzenloseSchublade/wotiti"

package-mode = false

# README file(s) are used as the package description
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.2.0"
plotly = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
pre-commit = "*"
pyinstaller = "^6.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
wotiti = "wotiti.__main__:main"
