[tool.poetry]
name = "wotiti"
version = "0.1.0"
description = "Small UI to track worktime"
authors = ["grenzenloseSchublade <hans.mueller@rub.de>"]
license = "MIT"
repository = "https://github.com/grenzenloseSchublade/wotiti"

package-mode = false

# README file(s) are used as the package description
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
flake8 = "*"
black = "*"
pre-commit = "*"
pyinstaller = "^6.12.0"

[tool.poetry.group.stats.dependencies]
# Data handling
numpy = "^2.2.3"
pandas = "^2.2.3"
# Calculations
scipy = "^1.10.0"
scikit-learn = "^1.2.0"
statsmodels = "^0.13.5"
# Visualisation
plotly = "^5.0.0"
#chart_studio
dash = "^2.0.0"
dash_bootstrap_components = "^0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[scripts]
wotiti = "wotiti.__main__:main"
