[project]
name = "wotiti"
version = "0.1.0"
description = "Small UI to track worktime"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "grenzenloseSchublade", email = "hans.mueller@rub.de" }]
dependencies = [
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black",
    "pre-commit",
    "pyinstaller>=6.12.0",
]
stats = [
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "statsmodels>=0.13.5",
    "plotly>=5.0.0",
    "dash>=2.18.2",
    "dash_bootstrap_components>=1.7.1",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wotiti"]
